other-cel/enforce-readwriteonce-pod/.kyverno-test/resource.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: badpvc
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: goodpvc
spec:
  accessModes:
  - ReadWriteOncePod
  resources:
    requests:
      storage: 1Gi
